--- a/exercicios/desafio010/index.html
+++ b/exercicios/desafio010/index.html
@@ -38,8 +38,8 @@
             </p>
 
             <picture>
-                <source media = "(max-width: 670px" srcset="__MACOSX/imagens/dan-droids-pq.png">
-                <img src="__MACOSX/imagens/dan-droids.png" alt="primeiro mascote do android">
+                <source media = "max-width: 670px" srcset="imagens/dan-droids-pq.png">
+                <img src="imagens/dan-droids.png" alt="primeiro mascote do android">
             </picture>
 
             <p>
@@ -55,8 +55,8 @@
             </p>
 
             <picture>
-                <source media = "(max-width: 670px" srcset="__MACOSX/imagens/irina-blok-pq.jpg">
-                <img src="__MACOSX/imagens/irina-blok.jpg" alt="irina-blok">
+                <source media = "max-width: 670px" srcset="imagens/irina-blok-pq.jpg">
+                <img src="imagens/irina-blok.jpg" alt="irina-blok">
             </picture>
 
             <p>
@@ -64,7 +64,7 @@
             </p>
 
            
-            <img src="__MACOSX/imagens/bugdroid.png" class="pequena" alt="bugdroid">
+            <img src="imagens/bugdroid.png" class="pequena" alt="bugdroid">
             
 
             <p>
