alteração de imagem

--- a/exercicios/desafio010/responsivo.html
+++ b/exercicios/desafio010/responsivo.html
@@ -32,8 +32,8 @@
         <h1>Testando Responsividade</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem reiciendis temporibus suscipit amet nam hic similique molestiae est numquam eius fuga accusantium, veniam dicta earum molestias quos cupiditate laudantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt neque enim illum quis consequatur consequuntur possimus corporis rem adipisci iste, autem quos, deleniti veritatis. Aliquam est fugit necessitatibus similique ea!Lorem</p>
         <picture>
-            <source media = "(max-width: 600px" srcset="__MACOSX/imagens/irina-blok-pq.jpg">
-            <img src="__MACOSX/imagens/irina-blok.jpg" alt="">
+            <source media = "(max-width: 600px" srcset="imagens/irina-blok-pq.jpg">
+            <img src="imagens/irina-blok.jpg" alt="">
         </picture>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem reiciendis temporibus suscipit amet nam hic similique molestiae est numquam eius fuga accusantium, veniam dicta earum molestias quos cupiditate laudantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt neque enim illum quis consequatur consequuntur possimus corporis rem adipisci iste, autem quos, deleniti veritatis. Aliquam est fugit necessitatibus similique ea!Lorem</p>
 
